01 - OpenCRVS Documentation/v1.3/product-specifications/core-functions/4.-register-event.md
---
title: "4. Register event"
source_url: "https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/4.-register-event"
markdown_url: "https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/4.-register-event.md"
version: "v1.3"
retrieved_at: "2026-09-16T15:06:42Z"
content_hash: "sha256:c6183f96207f2ab3cc2a80941d4cedfc9edf7b6233b53f8ea4c05a9b2cf58e5d"
---

> For the complete documentation index, see [llms.txt](https://documentation.opencrvs.org/llms.txt). Markdown versions of documentation pages are available by appending `.md` to page URLs; this page is available as [Markdown](https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/4.-register-event.md).

# 4. Register event

Once a declaration has been completed with all mandatory information as per the rules and regulations of the country. A Registrar is able to register it and create a permanently stored vital event record.

### **Configuration options:**

* Set registration number format

### **Pre-condition**

A record is in the Registrar’s Ready for review workqueue with the status ‘In Review’ or ‘Validated’

### **Triggers**

* A Registrar assigns and downloads the declaration
* A Registrar starts and completes a new declaration

### **Standard flow**

1. Registrar navigates to Ready for Review workqueue
2. User assigns themselves to the record
3. Declaration is downloaded and is now available to be validated and registered offline
4. User clicks “Review”
5. User validates declaration against supporting documents
6. User clicks “Register”
7. User confirms their intention to register the declaration
8. Declaration is sent to the Outbox for processing
9. Once processed the declaration status is updated to ‘Registered’

### **Post conditions**

* Registered record is sent to the Ready to Print workqueue. So a certificate can be printed and issued
* Record Audit is updated to show that the record has been ‘Registered’
* Informant receives sms notification with registration no.

### **Variations/Exceptions**

* The Registrar can choose to change a part of the declaration before registered. If so they will receive a warning prompt about making changes. Before navigating them to the required section of the form. A audit log of this change is recorded in Record Audit.

{% embed url="<https://www.loom.com/share/5569948448be4d2e9df6596907d480fb?sid=ab5441d8-e29e-4066-8e13-089ef9e04379>" %}


---

# Agent Instructions
This documentation is published with GitBook. GitBook is the documentation platform designed so that both humans and AI agents can read, navigate, and reason over technical content effectively. Learn more at gitbook.com.

## Querying This Documentation
If you need additional information that is not directly available in this page, you can query the documentation dynamically by asking a question.

Perform an HTTP GET request on the current page URL with the `ask` query parameter, and the optional `goal` query parameter:

```
GET https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/4.-register-event.md?ask=<question>&goal=<endgoal>
```

`ask` is the immediate question: it should be specific, self-contained, and written in natural language.
`goal` is optional and describes the broader end goal you are ultimately trying to accomplish on behalf of the user. GitBook uses it to tailor the answer towards what is most useful for that goal.

The response will contain a direct answer to the question and relevant excerpts and sources from the documentation.

Use this mechanism when the answer is not explicitly present in the current page, you need clarification or additional context, or you want to retrieve related documentation sections.
